--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -65,25 +65,33 @@ jobs:
     
       - name: Create GitHub Release
         if: steps.check.outputs.should_release == 'true'
-        uses: actions/create-release@v1
+        run: |
+          # Create release notes
+          RELEASE_NOTES=$(cat <<EOF
+          ## Release v${{ steps.version.outputs.version }}
+          
+          This is an automated release created after 3 commits.
+          
+          ### Changes
+          - Commits since last release: ${{ steps.commits.outputs.count }}
+          - Version: ${{ steps.version.outputs.version }}
+          
+          ### Full Changelog
+          See the [full commit history](https://github.com/${{ github.repository }}/compare/${{ steps.commits.outputs.last_tag }}...HEAD) for details.
+          EOF
+          )
+          
+          # Create tag if it doesn't exist
+          git tag -a v${{ steps.version.outputs.version }} -m "Release v${{ steps.version.outputs.version }}" || true
+          git push origin v${{ steps.version.outputs.version }} || true
+          
+          # Create release using GitHub CLI
+          gh release create v${{ steps.version.outputs.version }} \
+            --title "Release v${{ steps.version.outputs.version }}" \
+            --notes "$RELEASE_NOTES" \
+            --latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ steps.version.outputs.version }}
-          release_name: Release v${{ steps.version.outputs.version }}
-          body: |
-            ## Release v${{ steps.version.outputs.version }}
-            
-            This is an automated release created after 3 commits.
-            
-            ### Changes
-            - Commits since last release: ${{ steps.commits.outputs.count }}
-            - Version: ${{ steps.version.outputs.version }}
-            
-            ### Full Changelog
-            See the [full commit history](https://github.com/${{ github.repository }}/compare/${{ steps.commits.outputs.last_tag }}...HEAD) for details.
-          draft: false
-          prerelease: false
     
       - name: Summary
         run: |
