--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "eslint-plugin-promise": "^6.1.1",
         "html-validate": "^8.7.3",
         "prettier": "^3.2.5",
-        "puppeteer": "^21.11.0",
+        "@playwright/test": "^1.40.0",
         "stylelint": "^16.0.0",
         "stylelint-config-standard": "^36.0.0"
     },
