--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,9 +8,7 @@
     "selector-class-pattern": "^[a-z]([a-z0-9-]+)?(__([a-z0-9]+-?)+)?(--([a-z0-9]+-?)+){0,2}$",
     "custom-property-pattern": "^[a-z][a-z0-9-]*$",
     "value-no-vendor-prefix": true,
-    "property-no-vendor-prefix": {
-      "ignoreProperties": ["appearance", "backdrop-filter"]
-    },
+    "property-no-vendor-prefix": true,
     "at-rule-no-vendor-prefix": true,
     "media-feature-name-no-vendor-prefix": true,
     "selector-no-vendor-prefix": true,
